# Test-repo

./: .gitignore  AGRODOMAIN-CODEX-HANDOFF.md  CODEX-ONLY-SWARM-PLAN.md  Dockerfile  Procfile  R0-BACKEND-AUDIT.md  R4-CODEX-DEV2-ARTIFACT.md  R4-RB-037-CODEX-FRONTEND-ARTIFACT.md  R5-CODEX-DEV2-ARTIFACT.md  R5-RB-045-RB-049-CODEX-FRONTEND-ARTIFACT.md  R5-RB-051-BACKEND-ARTIFACT.md  R6-CODEX-DEV2-ARTIFACT.md  R6-RB-053-BACKEND-ARTIFACT.md  R7-CODEX-DEV2-ARTIFACT.md  R7-RB-058-BACKEND-ARTIFACT.md  R7-RB-060-CODEX-DEV1-ARTIFACT.md  R8-CODEX-DEV2-ARTIFACT.md  R8-RB-063-RB-069-RB-072-QA-ARTIFACT.md  R8-RB-065-RB-071-CODEX-DEV1-ARTIFACT.md  R8-RB-068-SECURITY-AUDIT-ARTIFACT.md  R8-RB-070-BUILDER-ARTIFACT.md  RB-001-002-DEPENDENCY-READY.md  RB-025-ONBOARDING-WIZARD-ARTIFACT.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  railway.web.json  turbo.json
MWH/Projects/Agrodomain/apps/worker/: package.json  pyproject.toml
apps/api/: README.md  agrodomain_api.db  alembic.ini  pyproject.toml  tmp-r1-debug.db
apps/api/agrodomain_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/app/: __init__.py  seed_demo_data.py
apps/api/app/api/routes/: admin.py  climate.py  commands.py  farm.py  fund.py  identity.py  marketplace.py  (+6 more)
apps/api/app/core/: application.py  config.py  contracts_catalog.py  logging.py  request_context.py  security.py  shared_runtime_config.py  telemetry.py
apps/api/app/services/: idempotency.py
apps/api/scripts/: reseed-demo.sh  seed.sh
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_control_plane_contract_integrity.py
apps/api/tests/integration/: test_admin_control_plane.py  test_app_boot.py  test_climate_runtime_integration.py  test_command_route.py  test_copilot_recommendations_runtime.py  test_farm_routes_runtime.py  test_finance_insurance_runtime.py  test_fund_routes_runtime.py  test_marketplace_agro_intelligence_connector.py  test_migrations_and_seed.py  test_n6_admin_observability_reliability.py  test_platform_boundary.py  test_traceability_runtime_integration.py  test_transport_routes_runtime.py  test_vertical_slice.py
apps/api/tests/unit/: test_advisory_runtime.py  test_climate_runtime.py  test_command_bus.py  test_fund_runtime.py  test_models_and_repositories.py  test_system.py  test_transport_routing_and_matching.py  test_transport_runtime.py
(+1842 files in other folders)
