[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrodomain-staging-runtime"
version = "0.1.0"
description = "Integrated staging runtime and E2E scaffolding for Agrodomain."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
