[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrodomain-worker"
version = "0.1.0"
description = "Agrodomain production worker scaffold."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
